# pandas-genomics

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml
docs/: api.rst  conf.py  index.rst  io.rst  release-history.rst
docs/_build/: .buildinfo  api.html  genindex.html  index.html  notes.html  objects.inv  py-modindex.html  release-history.html  search.html  searchindex.js
docs/_build/.doctrees/: api.doctree  environment.pickle  index.doctree  notes.doctree  release-history.doctree
docs/_build/.doctrees/accessors/: pandas_genomics.accessors.GenotypeDataframeAccessor.doctree  pandas_genomics.accessors.GenotypeSeriesAccessor.doctree
docs/_build/.doctrees/arrays/: pandas_genomics.arrays.GenotypeArray.doctree  pandas_genomics.arrays.GenotypeDtype.doctree
docs/_build/.doctrees/io/: pandas_genomics.io.from_bed.doctree  pandas_genomics.io.from_plink.doctree  pandas_genomics.io.from_vcf.doctree  pandas_genomics.io.to_plink.doctree
docs/_build/.doctrees/scalars/: pandas_genomics.scalars.Genotype.doctree  pandas_genomics.scalars.Region.doctree  pandas_genomics.scalars.Variant.doctree
docs/_build/.doctrees/sim/: pandas_genomics.sim.BAMS.doctree  pandas_genomics.sim.PenetranceTables.doctree  pandas_genomics.sim.SNPEffectEncodings.doctree  pandas_genomics.sim.generate_random_gt.doctree
docs/_build/_modules/: index.html
docs/_build/_modules/pandas_genomics/: scalars.html
docs/_build/_modules/pandas_genomics/io/: bed.html  (+1 more)
docs/_build/_sources/: index.rst.txt  notes.rst.txt
docs/_build/_sources/accessors/: pandas_genomics.accessors.GenotypeSeriesAccessor.rst.txt
docs/_build/_sources/arrays/: pandas_genomics.arrays.GenotypeArray.rst.txt  pandas_genomics.arrays.GenotypeDtype.rst.txt
docs/_build/_sources/io/: pandas_genomics.io.from_bed.rst.txt  pandas_genomics.io.from_plink.rst.txt  pandas_genomics.io.from_vcf.rst.txt  pandas_genomics.io.to_plink.rst.txt
docs/_build/_sources/scalars/: pandas_genomics.scalars.Variant.rst.txt
docs/_build/accessors/: pandas_genomics.accessors.GenotypeDataframeAccessor.html  pandas_genomics.accessors.GenotypeSeriesAccessor.html
docs/_build/arrays/: pandas_genomics.arrays.GenotypeArray.html  pandas_genomics.arrays.GenotypeDtype.html
docs/_build/io/: pandas_genomics.io.from_bed.html  pandas_genomics.io.from_plink.html  pandas_genomics.io.from_vcf.html  pandas_genomics.io.to_plink.html
docs/_build/scalars/: pandas_genomics.scalars.Genotype.html  pandas_genomics.scalars.Region.html  pandas_genomics.scalars.Variant.html
docs/_build/sim/: pandas_genomics.sim.BAMS.html  pandas_genomics.sim.PenetranceTables.html  pandas_genomics.sim.SNPEffectEncodings.html  pandas_genomics.sim.generate_random_gt.html
docs/accessors/: pandas_genomics.accessors.GenotypeDataframeAccessor.rst
docs/scalars/: pandas_genomics.scalars.Genotype.rst  pandas_genomics.scalars.Region.rst
docs/sim/: pandas_genomics.sim.BAMS.rst  pandas_genomics.sim.generate_random_gt.rst
pandas_genomics/: __init__.py  accessors.py  io.py  scalars.py  simulation.py  utils.py
pandas_genomics/accessors/: __init__.py  dataframe_accessor.py  series_accessor.py
pandas_genomics/accessors/utils/: __init__.py  edge_encoding.py  weighted_encodings.py
pandas_genomics/arrays/: __init__.py  encoding_mixin.py  genotype_array.py  info_mixin.py  utils.py
pandas_genomics/dtypes/: genotype.py  scalars.py
pandas_genomics/io/: __init__.py  bed.py  plink.py  vcf.py
pandas_genomics/io/plink/: __init__.py  from_plink.py  to_plink.py
pandas_genomics/sim/: BAMS.py  __init__.py  biallelic_model_simulator.py  random_gt.py
pandas_genomics/utils/: __init__.py  weighted_encodings.py
tests/: conftest.py
tests/data/bed/: bed_test.bed
tests/data/plink/: generate_data.sh  medium.sim  plink_test_medium-temporary.simfreq  plink_test_medium.bim  plink_test_medium.fam  plink_test_small-temporary.simfreq  plink_test_small.bed  plink_test_small.bim  plink_test_small.fam  small.sim
tests/genotype/: test_genotypearray.py
tests/genotype_array/: conftest.py  test_ExtensionArray.py  test_GenotypeArray.py  test_GenotypeArrayAccessors.py  test_GenotypeArrayEncoding.py  test_GenotypeArrayInfo.py  test_GenotypeDtype.py  test_genotypearray.py
tests/io/: conftest.py  test_bed.py  test_io.py  test_plink.py  test_vcf.py
tests/scalars/: conftest.py  test_genotype.py  test_region.py  test_variant.py
tests/simulation/: test_biallelic_sim.py  test_random.py
(+9 files in other folders)
