[tool.poetry]
name = "pandas-genomics"
version = "0.7.0"
description = "Pandas ExtensionDtypes and ExtensionArray for working with genomics data"
license = "BSD-3-Clause"
authors = ["John McGuigan <jrm5100@psu.edu>"]
readme = "README.md"
repository = "https://github.com/HallLab/pandas-genomics/"
documentation = "https://pandas-genomics.readthedocs.io/en/latest/"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[tool.poetry.dependencies]
python = "^3.7.1,<3.10"
numpy = "^1.21"
pandas = "^1.2"
cyvcf2 = {version="^0.30", markers = "sys_platform != 'win32'"}
sphinx = {version = "^3.2.1", optional = true}
sphinx_rtd_theme = {version = "^0.5.0", optional = true}
numpydoc = {version = "^1.1.0", optional = true}
sphinx-copybutton = {version = "^0.3.0", optional = true}
ipython = {version = "^7.18.1", optional = true}
importlib-metadata = {version = "^2.0", python = "<3.8"}
statsmodels = "^0.12.2"
scipy = "~1.6"

[tool.poetry.dev-dependencies]
pytest = "^6"
flake8 = "^3.8.4"
pytest-cov = "^2.10.1"
pytest-xdist = "^2.1.0"
black = "^20.8b1"

[tool.poetry.extras]
docs = ["sphinx", "numpydoc", "sphinx_rtd_theme", "sphinx-copybutton", "ipython"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"