[tool.poetry]
name = "pandas-genomics"
version = "1.0.0"
description = "Pandas ExtensionDtypes and ExtensionArray for working with genomics data"
license = "BSD-3-Clause"
authors = ["Andre Rico <alr6366@psu.edu>"]
readme = "README.md"
repository = "https://github.com/HallLab/pandas-genomics/"
documentation = "https://pandas-genomics.readthedocs.io/en/latest/"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = ">=1.24,<2.0"
pandas = ">=1.3,<2.2"
cyvcf2 = { version = ">=0.31.1", markers = "sys_platform != 'win32'" }
sphinx_rtd_theme = {version = "^0.5.0", optional = true}
numpydoc = {version = "^1.1.0", optional = true}
sphinx-copybutton = {version = "^0.3.0", optional = true}
ipython = {version = "^7.18.1", optional = true}
importlib-metadata = {version = "^2.0", python = "<3.8"}
statsmodels = "^0.14"
scipy = "^1.9"
sphinx = "^4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6"
flake8 = "^3.8.4"
pytest-cov = "^2.10.1"
pytest-xdist = "^2.1.0"
black = ">=22"

[tool.poetry.extras]
docs = ["sphinx", "numpydoc", "sphinx_rtd_theme", "sphinx-copybutton", "ipython"]

[tool.poetry.group.dev.dependencies]
tox = "^4.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"